Honor Option "NoDDC" correctly

Move xf86CollectOptions before the DDC code so it can actually hear us
when we ask to disable DDC.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=46541
Signed-off-by: Adam Jackson <ajax@redhat.com>